# trading_algo

./: .gitignore  LICENSE  pyproject.toml  requirements-refresh.txt
.github/workflows/: README.md  refresh.yml  unified.yml
sync_tools/: README.md  pull_file.py  pull_repo.py  push_file.py  push_repo.py  sync.py
tools/: auto_login.py
trading_algo/: .gitignore  core.py  pyproject.toml  run_saras.py  run_vs.py  runner.py  trading_algo_failure_mailers.py
trading_algo/.github/workflows/: cron_run.yml  unified.yml
trading_algo/examples/: sample_config.yml
trading_algo/tests/: test_core.py
trading_algo/trading_algo/: config.py  core.py  utils.py
