[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_algo"
version = "0.0.1"
packages = ["trading_algo"]
description = "Trading algorithm scaffold"
authors = [{name="Sugam Kuchhal"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML",
  "requests",
]
