[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_algo"
version = "0.0.1"
description = "Trading algorithm scaffold"
authors = [{name="Sugam Kuchhal"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML",
  "requests",
  "pydantic",
]

# Use setuptools find-packages instead of `packages` in `project`
[tool.setuptools.packages.find]
where = ["."]
include = ["trading_algo*"]