[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_algo"
version = "0.0.1"
description = "Trading algorithm repo"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"